app/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AVG
    BETWEEN
    COUNT
    EXISTS
    GROUP
    HAVING
    IN
    IS
    MAX
    MIN
    NULL
    PATTERN
    PERCENT
    SUM

Grammar

Rule 0     S' -> start
Rule 1     start -> select
Rule 2     start -> insert
Rule 3     start -> update
Rule 4     start -> delete
Rule 5     empty -> <empty>
Rule 6     select -> SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
Rule 7     insert -> INSERT INTO DATASOURCE icolumn VALUES LPAREN values RPAREN SIMICOLON
Rule 8     insert -> INSERT INTO DATASOURCE LPAREN select RPAREN SIMICOLON
Rule 9     expression -> expression PLUS term
Rule 10    expression -> expression MINUS term
Rule 11    expression -> term
Rule 12    term -> term TIMES factor
Rule 13    term -> factor
Rule 14    factor -> NUMBER
Rule 15    term -> term DIVIDE factor
Rule 16    factor -> LPAREN expression RPAREN
Rule 17    logical -> EQUAL
Rule 18    logical -> NOTEQUAL
Rule 19    logical -> BIGGER_EQUAL
Rule 20    logical -> BIGGER
Rule 21    logical -> SMALLER_EQUAL
Rule 22    logical -> SMALLER
Rule 23    where -> WHERE conditions
Rule 24    where -> empty
Rule 25    conditions -> LPAREN conditions RPAREN
Rule 26    conditions -> conditions AND conditions
Rule 27    conditions -> conditions OR conditions
Rule 28    conditions -> exp LIKE STRING
Rule 29    conditions -> exp logical exp
Rule 30    conditions -> NOT conditions
Rule 31    exp -> STRING
Rule 32    exp -> COLNAME
Rule 33    exp -> expression
Rule 34    distinct -> DISTINCT
Rule 35    distinct -> empty
Rule 36    column -> COLNUMBER
Rule 37    column -> COLNAME
Rule 38    columns -> columns COMMA columns
Rule 39    columns -> column
Rule 40    select_columns -> TIMES
Rule 41    select_columns -> columns
Rule 42    into -> INTO DATASOURCE
Rule 43    into -> empty
Rule 44    order -> ORDER BY column way
Rule 45    order -> empty
Rule 46    way -> ASC
Rule 47    way -> empty
Rule 48    way -> DESC
Rule 49    limit -> LIMIT NUMBER
Rule 50    limit -> empty
Rule 51    values -> STRING
Rule 52    values -> NUMBER
Rule 53    values -> values COMMA values
Rule 54    icolumn -> empty
Rule 55    update -> UPDATE DATASOURCE SET assigns where SIMICOLON
Rule 56    assigns -> COLNAME EQUAL
Rule 57    assigns -> empty
Rule 58    delete -> DELETE FROM DATASOURCE where

Terminals, with rules where they appear

AND                  : 26
ASC                  : 46
AVG                  : 
BETWEEN              : 
BIGGER               : 20
BIGGER_EQUAL         : 19
BY                   : 44
COLNAME              : 32 37 56
COLNUMBER            : 36
COMMA                : 38 53
COUNT                : 
DATASOURCE           : 6 7 8 42 55 58
DELETE               : 58
DESC                 : 48
DISTINCT             : 34
DIVIDE               : 15
EQUAL                : 17 56
EXISTS               : 
FROM                 : 6 58
GROUP                : 
HAVING               : 
IN                   : 
INSERT               : 7 8
INTO                 : 7 8 42
IS                   : 
LIKE                 : 28
LIMIT                : 49
LPAREN               : 7 8 16 25
MAX                  : 
MIN                  : 
MINUS                : 10
NOT                  : 30
NOTEQUAL             : 18
NULL                 : 
NUMBER               : 14 49 52
OR                   : 27
ORDER                : 44
PATTERN              : 
PERCENT              : 
PLUS                 : 9
RPAREN               : 7 8 16 25
SELECT               : 6
SET                  : 55
SIMICOLON            : 6 7 8 55
SMALLER              : 22
SMALLER_EQUAL        : 21
STRING               : 28 31 51
SUM                  : 
TIMES                : 12 40
UPDATE               : 55
VALUES               : 7
WHERE                : 23
error                : 

Nonterminals, with rules where they appear

assigns              : 55
column               : 39 44
columns              : 38 38 41
conditions           : 23 25 26 26 27 27 30
delete               : 4
distinct             : 6
empty                : 24 35 43 45 47 50 54 57
exp                  : 28 29 29
expression           : 9 10 16 33
factor               : 12 13 15
icolumn              : 7
insert               : 2
into                 : 6
limit                : 6
logical              : 29
order                : 6
select               : 1 8
select_columns       : 6
start                : 0
term                 : 9 10 11 12 15
update               : 3
values               : 7 53 53
way                  : 44
where                : 6 55 58

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . select
    (2) start -> . insert
    (3) start -> . update
    (4) start -> . delete
    (6) select -> . SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (7) insert -> . INSERT INTO DATASOURCE icolumn VALUES LPAREN values RPAREN SIMICOLON
    (8) insert -> . INSERT INTO DATASOURCE LPAREN select RPAREN SIMICOLON
    (55) update -> . UPDATE DATASOURCE SET assigns where SIMICOLON
    (58) delete -> . DELETE FROM DATASOURCE where

    SELECT          shift and go to state 6
    INSERT          shift and go to state 7
    UPDATE          shift and go to state 8
    DELETE          shift and go to state 9

    start                          shift and go to state 1
    select                         shift and go to state 2
    insert                         shift and go to state 3
    update                         shift and go to state 4
    delete                         shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> select .

    $end            reduce using rule 1 (start -> select .)


state 3

    (2) start -> insert .

    $end            reduce using rule 2 (start -> insert .)


state 4

    (3) start -> update .

    $end            reduce using rule 3 (start -> update .)


state 5

    (4) start -> delete .

    $end            reduce using rule 4 (start -> delete .)


state 6

    (6) select -> SELECT . distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (34) distinct -> . DISTINCT
    (35) distinct -> . empty
    (5) empty -> .

    DISTINCT        shift and go to state 11
    TIMES           reduce using rule 5 (empty -> .)
    COLNUMBER       reduce using rule 5 (empty -> .)
    COLNAME         reduce using rule 5 (empty -> .)

    distinct                       shift and go to state 10
    empty                          shift and go to state 12

state 7

    (7) insert -> INSERT . INTO DATASOURCE icolumn VALUES LPAREN values RPAREN SIMICOLON
    (8) insert -> INSERT . INTO DATASOURCE LPAREN select RPAREN SIMICOLON

    INTO            shift and go to state 13


state 8

    (55) update -> UPDATE . DATASOURCE SET assigns where SIMICOLON

    DATASOURCE      shift and go to state 14


state 9

    (58) delete -> DELETE . FROM DATASOURCE where

    FROM            shift and go to state 15


state 10

    (6) select -> SELECT distinct . select_columns FROM DATASOURCE into where order limit SIMICOLON
    (40) select_columns -> . TIMES
    (41) select_columns -> . columns
    (38) columns -> . columns COMMA columns
    (39) columns -> . column
    (36) column -> . COLNUMBER
    (37) column -> . COLNAME

    TIMES           shift and go to state 17
    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    select_columns                 shift and go to state 16
    columns                        shift and go to state 18
    column                         shift and go to state 19

state 11

    (34) distinct -> DISTINCT .

    TIMES           reduce using rule 34 (distinct -> DISTINCT .)
    COLNUMBER       reduce using rule 34 (distinct -> DISTINCT .)
    COLNAME         reduce using rule 34 (distinct -> DISTINCT .)


state 12

    (35) distinct -> empty .

    TIMES           reduce using rule 35 (distinct -> empty .)
    COLNUMBER       reduce using rule 35 (distinct -> empty .)
    COLNAME         reduce using rule 35 (distinct -> empty .)


state 13

    (7) insert -> INSERT INTO . DATASOURCE icolumn VALUES LPAREN values RPAREN SIMICOLON
    (8) insert -> INSERT INTO . DATASOURCE LPAREN select RPAREN SIMICOLON

    DATASOURCE      shift and go to state 22


state 14

    (55) update -> UPDATE DATASOURCE . SET assigns where SIMICOLON

    SET             shift and go to state 23


state 15

    (58) delete -> DELETE FROM . DATASOURCE where

    DATASOURCE      shift and go to state 24


state 16

    (6) select -> SELECT distinct select_columns . FROM DATASOURCE into where order limit SIMICOLON

    FROM            shift and go to state 25


state 17

    (40) select_columns -> TIMES .

    FROM            reduce using rule 40 (select_columns -> TIMES .)


state 18

    (41) select_columns -> columns .
    (38) columns -> columns . COMMA columns

    FROM            reduce using rule 41 (select_columns -> columns .)
    COMMA           shift and go to state 26


state 19

    (39) columns -> column .

    COMMA           reduce using rule 39 (columns -> column .)
    FROM            reduce using rule 39 (columns -> column .)


state 20

    (36) column -> COLNUMBER .

    COMMA           reduce using rule 36 (column -> COLNUMBER .)
    FROM            reduce using rule 36 (column -> COLNUMBER .)
    ASC             reduce using rule 36 (column -> COLNUMBER .)
    DESC            reduce using rule 36 (column -> COLNUMBER .)
    LIMIT           reduce using rule 36 (column -> COLNUMBER .)
    SIMICOLON       reduce using rule 36 (column -> COLNUMBER .)


state 21

    (37) column -> COLNAME .

    COMMA           reduce using rule 37 (column -> COLNAME .)
    FROM            reduce using rule 37 (column -> COLNAME .)
    ASC             reduce using rule 37 (column -> COLNAME .)
    DESC            reduce using rule 37 (column -> COLNAME .)
    LIMIT           reduce using rule 37 (column -> COLNAME .)
    SIMICOLON       reduce using rule 37 (column -> COLNAME .)


state 22

    (7) insert -> INSERT INTO DATASOURCE . icolumn VALUES LPAREN values RPAREN SIMICOLON
    (8) insert -> INSERT INTO DATASOURCE . LPAREN select RPAREN SIMICOLON
    (54) icolumn -> . empty
    (5) empty -> .

    LPAREN          shift and go to state 28
    VALUES          reduce using rule 5 (empty -> .)

    icolumn                        shift and go to state 27
    empty                          shift and go to state 29

state 23

    (55) update -> UPDATE DATASOURCE SET . assigns where SIMICOLON
    (56) assigns -> . COLNAME EQUAL
    (57) assigns -> . empty
    (5) empty -> .

    COLNAME         shift and go to state 31
    WHERE           reduce using rule 5 (empty -> .)
    SIMICOLON       reduce using rule 5 (empty -> .)

    assigns                        shift and go to state 30
    empty                          shift and go to state 32

state 24

    (58) delete -> DELETE FROM DATASOURCE . where
    (23) where -> . WHERE conditions
    (24) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    $end            reduce using rule 5 (empty -> .)

    where                          shift and go to state 33
    empty                          shift and go to state 35

state 25

    (6) select -> SELECT distinct select_columns FROM . DATASOURCE into where order limit SIMICOLON

    DATASOURCE      shift and go to state 36


state 26

    (38) columns -> columns COMMA . columns
    (38) columns -> . columns COMMA columns
    (39) columns -> . column
    (36) column -> . COLNUMBER
    (37) column -> . COLNAME

    COLNUMBER       shift and go to state 20
    COLNAME         shift and go to state 21

    columns                        shift and go to state 37
    column                         shift and go to state 19

state 27

    (7) insert -> INSERT INTO DATASOURCE icolumn . VALUES LPAREN values RPAREN SIMICOLON

    VALUES          shift and go to state 38


state 28

    (8) insert -> INSERT INTO DATASOURCE LPAREN . select RPAREN SIMICOLON
    (6) select -> . SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON

    SELECT          shift and go to state 6

    select                         shift and go to state 39

state 29

    (54) icolumn -> empty .

    VALUES          reduce using rule 54 (icolumn -> empty .)


state 30

    (55) update -> UPDATE DATASOURCE SET assigns . where SIMICOLON
    (23) where -> . WHERE conditions
    (24) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    SIMICOLON       reduce using rule 5 (empty -> .)

    where                          shift and go to state 40
    empty                          shift and go to state 35

state 31

    (56) assigns -> COLNAME . EQUAL

    EQUAL           shift and go to state 41


state 32

    (57) assigns -> empty .

    WHERE           reduce using rule 57 (assigns -> empty .)
    SIMICOLON       reduce using rule 57 (assigns -> empty .)


state 33

    (58) delete -> DELETE FROM DATASOURCE where .

    $end            reduce using rule 58 (delete -> DELETE FROM DATASOURCE where .)


state 34

    (23) where -> WHERE . conditions
    (25) conditions -> . LPAREN conditions RPAREN
    (26) conditions -> . conditions AND conditions
    (27) conditions -> . conditions OR conditions
    (28) conditions -> . exp LIKE STRING
    (29) conditions -> . exp logical exp
    (30) conditions -> . NOT conditions
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 43
    NOT             shift and go to state 46
    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51

    conditions                     shift and go to state 42
    exp                            shift and go to state 44
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 35

    (24) where -> empty .

    $end            reduce using rule 24 (where -> empty .)
    SIMICOLON       reduce using rule 24 (where -> empty .)
    ORDER           reduce using rule 24 (where -> empty .)
    LIMIT           reduce using rule 24 (where -> empty .)


state 36

    (6) select -> SELECT distinct select_columns FROM DATASOURCE . into where order limit SIMICOLON
    (42) into -> . INTO DATASOURCE
    (43) into -> . empty
    (5) empty -> .

    INTO            shift and go to state 53
    WHERE           reduce using rule 5 (empty -> .)
    ORDER           reduce using rule 5 (empty -> .)
    LIMIT           reduce using rule 5 (empty -> .)
    SIMICOLON       reduce using rule 5 (empty -> .)

    into                           shift and go to state 52
    empty                          shift and go to state 54

state 37

    (38) columns -> columns COMMA columns .
    (38) columns -> columns . COMMA columns

  ! shift/reduce conflict for COMMA resolved as shift
    FROM            reduce using rule 38 (columns -> columns COMMA columns .)
    COMMA           shift and go to state 26

  ! COMMA           [ reduce using rule 38 (columns -> columns COMMA columns .) ]


state 38

    (7) insert -> INSERT INTO DATASOURCE icolumn VALUES . LPAREN values RPAREN SIMICOLON

    LPAREN          shift and go to state 55


state 39

    (8) insert -> INSERT INTO DATASOURCE LPAREN select . RPAREN SIMICOLON

    RPAREN          shift and go to state 56


state 40

    (55) update -> UPDATE DATASOURCE SET assigns where . SIMICOLON

    SIMICOLON       shift and go to state 57


state 41

    (56) assigns -> COLNAME EQUAL .

    WHERE           reduce using rule 56 (assigns -> COLNAME EQUAL .)
    SIMICOLON       reduce using rule 56 (assigns -> COLNAME EQUAL .)


state 42

    (23) where -> WHERE conditions .
    (26) conditions -> conditions . AND conditions
    (27) conditions -> conditions . OR conditions

    $end            reduce using rule 23 (where -> WHERE conditions .)
    SIMICOLON       reduce using rule 23 (where -> WHERE conditions .)
    ORDER           reduce using rule 23 (where -> WHERE conditions .)
    LIMIT           reduce using rule 23 (where -> WHERE conditions .)
    AND             shift and go to state 58
    OR              shift and go to state 59


state 43

    (25) conditions -> LPAREN . conditions RPAREN
    (16) factor -> LPAREN . expression RPAREN
    (25) conditions -> . LPAREN conditions RPAREN
    (26) conditions -> . conditions AND conditions
    (27) conditions -> . conditions OR conditions
    (28) conditions -> . exp LIKE STRING
    (29) conditions -> . exp logical exp
    (30) conditions -> . NOT conditions
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 43
    NOT             shift and go to state 46
    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51

    conditions                     shift and go to state 60
    expression                     shift and go to state 61
    exp                            shift and go to state 44
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 44

    (28) conditions -> exp . LIKE STRING
    (29) conditions -> exp . logical exp
    (17) logical -> . EQUAL
    (18) logical -> . NOTEQUAL
    (19) logical -> . BIGGER_EQUAL
    (20) logical -> . BIGGER
    (21) logical -> . SMALLER_EQUAL
    (22) logical -> . SMALLER

    LIKE            shift and go to state 62
    EQUAL           shift and go to state 64
    NOTEQUAL        shift and go to state 65
    BIGGER_EQUAL    shift and go to state 66
    BIGGER          shift and go to state 67
    SMALLER_EQUAL   shift and go to state 68
    SMALLER         shift and go to state 69

    logical                        shift and go to state 63

state 45

    (31) exp -> STRING .

    LIKE            reduce using rule 31 (exp -> STRING .)
    EQUAL           reduce using rule 31 (exp -> STRING .)
    NOTEQUAL        reduce using rule 31 (exp -> STRING .)
    BIGGER_EQUAL    reduce using rule 31 (exp -> STRING .)
    BIGGER          reduce using rule 31 (exp -> STRING .)
    SMALLER_EQUAL   reduce using rule 31 (exp -> STRING .)
    SMALLER         reduce using rule 31 (exp -> STRING .)
    AND             reduce using rule 31 (exp -> STRING .)
    OR              reduce using rule 31 (exp -> STRING .)
    $end            reduce using rule 31 (exp -> STRING .)
    SIMICOLON       reduce using rule 31 (exp -> STRING .)
    ORDER           reduce using rule 31 (exp -> STRING .)
    LIMIT           reduce using rule 31 (exp -> STRING .)
    RPAREN          reduce using rule 31 (exp -> STRING .)


state 46

    (30) conditions -> NOT . conditions
    (25) conditions -> . LPAREN conditions RPAREN
    (26) conditions -> . conditions AND conditions
    (27) conditions -> . conditions OR conditions
    (28) conditions -> . exp LIKE STRING
    (29) conditions -> . exp logical exp
    (30) conditions -> . NOT conditions
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 43
    NOT             shift and go to state 46
    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51

    conditions                     shift and go to state 70
    exp                            shift and go to state 44
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 47

    (32) exp -> COLNAME .

    LIKE            reduce using rule 32 (exp -> COLNAME .)
    EQUAL           reduce using rule 32 (exp -> COLNAME .)
    NOTEQUAL        reduce using rule 32 (exp -> COLNAME .)
    BIGGER_EQUAL    reduce using rule 32 (exp -> COLNAME .)
    BIGGER          reduce using rule 32 (exp -> COLNAME .)
    SMALLER_EQUAL   reduce using rule 32 (exp -> COLNAME .)
    SMALLER         reduce using rule 32 (exp -> COLNAME .)
    AND             reduce using rule 32 (exp -> COLNAME .)
    OR              reduce using rule 32 (exp -> COLNAME .)
    $end            reduce using rule 32 (exp -> COLNAME .)
    SIMICOLON       reduce using rule 32 (exp -> COLNAME .)
    ORDER           reduce using rule 32 (exp -> COLNAME .)
    LIMIT           reduce using rule 32 (exp -> COLNAME .)
    RPAREN          reduce using rule 32 (exp -> COLNAME .)


state 48

    (33) exp -> expression .
    (9) expression -> expression . PLUS term
    (10) expression -> expression . MINUS term

    LIKE            reduce using rule 33 (exp -> expression .)
    EQUAL           reduce using rule 33 (exp -> expression .)
    NOTEQUAL        reduce using rule 33 (exp -> expression .)
    BIGGER_EQUAL    reduce using rule 33 (exp -> expression .)
    BIGGER          reduce using rule 33 (exp -> expression .)
    SMALLER_EQUAL   reduce using rule 33 (exp -> expression .)
    SMALLER         reduce using rule 33 (exp -> expression .)
    AND             reduce using rule 33 (exp -> expression .)
    OR              reduce using rule 33 (exp -> expression .)
    $end            reduce using rule 33 (exp -> expression .)
    SIMICOLON       reduce using rule 33 (exp -> expression .)
    ORDER           reduce using rule 33 (exp -> expression .)
    LIMIT           reduce using rule 33 (exp -> expression .)
    RPAREN          reduce using rule 33 (exp -> expression .)
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72


state 49

    (11) expression -> term .
    (12) term -> term . TIMES factor
    (15) term -> term . DIVIDE factor

    PLUS            reduce using rule 11 (expression -> term .)
    MINUS           reduce using rule 11 (expression -> term .)
    LIKE            reduce using rule 11 (expression -> term .)
    EQUAL           reduce using rule 11 (expression -> term .)
    NOTEQUAL        reduce using rule 11 (expression -> term .)
    BIGGER_EQUAL    reduce using rule 11 (expression -> term .)
    BIGGER          reduce using rule 11 (expression -> term .)
    SMALLER_EQUAL   reduce using rule 11 (expression -> term .)
    SMALLER         reduce using rule 11 (expression -> term .)
    RPAREN          reduce using rule 11 (expression -> term .)
    AND             reduce using rule 11 (expression -> term .)
    OR              reduce using rule 11 (expression -> term .)
    $end            reduce using rule 11 (expression -> term .)
    SIMICOLON       reduce using rule 11 (expression -> term .)
    ORDER           reduce using rule 11 (expression -> term .)
    LIMIT           reduce using rule 11 (expression -> term .)
    TIMES           shift and go to state 73
    DIVIDE          shift and go to state 74


state 50

    (13) term -> factor .

    TIMES           reduce using rule 13 (term -> factor .)
    DIVIDE          reduce using rule 13 (term -> factor .)
    PLUS            reduce using rule 13 (term -> factor .)
    MINUS           reduce using rule 13 (term -> factor .)
    LIKE            reduce using rule 13 (term -> factor .)
    EQUAL           reduce using rule 13 (term -> factor .)
    NOTEQUAL        reduce using rule 13 (term -> factor .)
    BIGGER_EQUAL    reduce using rule 13 (term -> factor .)
    BIGGER          reduce using rule 13 (term -> factor .)
    SMALLER_EQUAL   reduce using rule 13 (term -> factor .)
    SMALLER         reduce using rule 13 (term -> factor .)
    RPAREN          reduce using rule 13 (term -> factor .)
    AND             reduce using rule 13 (term -> factor .)
    OR              reduce using rule 13 (term -> factor .)
    $end            reduce using rule 13 (term -> factor .)
    SIMICOLON       reduce using rule 13 (term -> factor .)
    ORDER           reduce using rule 13 (term -> factor .)
    LIMIT           reduce using rule 13 (term -> factor .)


state 51

    (14) factor -> NUMBER .

    TIMES           reduce using rule 14 (factor -> NUMBER .)
    DIVIDE          reduce using rule 14 (factor -> NUMBER .)
    PLUS            reduce using rule 14 (factor -> NUMBER .)
    MINUS           reduce using rule 14 (factor -> NUMBER .)
    LIKE            reduce using rule 14 (factor -> NUMBER .)
    EQUAL           reduce using rule 14 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 14 (factor -> NUMBER .)
    BIGGER_EQUAL    reduce using rule 14 (factor -> NUMBER .)
    BIGGER          reduce using rule 14 (factor -> NUMBER .)
    SMALLER_EQUAL   reduce using rule 14 (factor -> NUMBER .)
    SMALLER         reduce using rule 14 (factor -> NUMBER .)
    RPAREN          reduce using rule 14 (factor -> NUMBER .)
    AND             reduce using rule 14 (factor -> NUMBER .)
    OR              reduce using rule 14 (factor -> NUMBER .)
    $end            reduce using rule 14 (factor -> NUMBER .)
    SIMICOLON       reduce using rule 14 (factor -> NUMBER .)
    ORDER           reduce using rule 14 (factor -> NUMBER .)
    LIMIT           reduce using rule 14 (factor -> NUMBER .)


state 52

    (6) select -> SELECT distinct select_columns FROM DATASOURCE into . where order limit SIMICOLON
    (23) where -> . WHERE conditions
    (24) where -> . empty
    (5) empty -> .

    WHERE           shift and go to state 34
    ORDER           reduce using rule 5 (empty -> .)
    LIMIT           reduce using rule 5 (empty -> .)
    SIMICOLON       reduce using rule 5 (empty -> .)

    where                          shift and go to state 75
    empty                          shift and go to state 35

state 53

    (42) into -> INTO . DATASOURCE

    DATASOURCE      shift and go to state 76


state 54

    (43) into -> empty .

    WHERE           reduce using rule 43 (into -> empty .)
    ORDER           reduce using rule 43 (into -> empty .)
    LIMIT           reduce using rule 43 (into -> empty .)
    SIMICOLON       reduce using rule 43 (into -> empty .)


state 55

    (7) insert -> INSERT INTO DATASOURCE icolumn VALUES LPAREN . values RPAREN SIMICOLON
    (51) values -> . STRING
    (52) values -> . NUMBER
    (53) values -> . values COMMA values

    STRING          shift and go to state 78
    NUMBER          shift and go to state 79

    values                         shift and go to state 77

state 56

    (8) insert -> INSERT INTO DATASOURCE LPAREN select RPAREN . SIMICOLON

    SIMICOLON       shift and go to state 80


state 57

    (55) update -> UPDATE DATASOURCE SET assigns where SIMICOLON .

    $end            reduce using rule 55 (update -> UPDATE DATASOURCE SET assigns where SIMICOLON .)


state 58

    (26) conditions -> conditions AND . conditions
    (25) conditions -> . LPAREN conditions RPAREN
    (26) conditions -> . conditions AND conditions
    (27) conditions -> . conditions OR conditions
    (28) conditions -> . exp LIKE STRING
    (29) conditions -> . exp logical exp
    (30) conditions -> . NOT conditions
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 43
    NOT             shift and go to state 46
    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51

    conditions                     shift and go to state 81
    exp                            shift and go to state 44
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 59

    (27) conditions -> conditions OR . conditions
    (25) conditions -> . LPAREN conditions RPAREN
    (26) conditions -> . conditions AND conditions
    (27) conditions -> . conditions OR conditions
    (28) conditions -> . exp LIKE STRING
    (29) conditions -> . exp logical exp
    (30) conditions -> . NOT conditions
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 43
    NOT             shift and go to state 46
    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51

    conditions                     shift and go to state 82
    exp                            shift and go to state 44
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 60

    (25) conditions -> LPAREN conditions . RPAREN
    (26) conditions -> conditions . AND conditions
    (27) conditions -> conditions . OR conditions

    RPAREN          shift and go to state 83
    AND             shift and go to state 58
    OR              shift and go to state 59


state 61

    (16) factor -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS term
    (10) expression -> expression . MINUS term
    (33) exp -> expression .

    RPAREN          shift and go to state 84
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    LIKE            reduce using rule 33 (exp -> expression .)
    EQUAL           reduce using rule 33 (exp -> expression .)
    NOTEQUAL        reduce using rule 33 (exp -> expression .)
    BIGGER_EQUAL    reduce using rule 33 (exp -> expression .)
    BIGGER          reduce using rule 33 (exp -> expression .)
    SMALLER_EQUAL   reduce using rule 33 (exp -> expression .)
    SMALLER         reduce using rule 33 (exp -> expression .)


state 62

    (28) conditions -> exp LIKE . STRING

    STRING          shift and go to state 85


state 63

    (29) conditions -> exp logical . exp
    (31) exp -> . STRING
    (32) exp -> . COLNAME
    (33) exp -> . expression
    (9) expression -> . expression PLUS term
    (10) expression -> . expression MINUS term
    (11) expression -> . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    STRING          shift and go to state 45
    COLNAME         shift and go to state 47
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 87

    exp                            shift and go to state 86
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50

state 64

    (17) logical -> EQUAL .

    STRING          reduce using rule 17 (logical -> EQUAL .)
    COLNAME         reduce using rule 17 (logical -> EQUAL .)
    NUMBER          reduce using rule 17 (logical -> EQUAL .)
    LPAREN          reduce using rule 17 (logical -> EQUAL .)


state 65

    (18) logical -> NOTEQUAL .

    STRING          reduce using rule 18 (logical -> NOTEQUAL .)
    COLNAME         reduce using rule 18 (logical -> NOTEQUAL .)
    NUMBER          reduce using rule 18 (logical -> NOTEQUAL .)
    LPAREN          reduce using rule 18 (logical -> NOTEQUAL .)


state 66

    (19) logical -> BIGGER_EQUAL .

    STRING          reduce using rule 19 (logical -> BIGGER_EQUAL .)
    COLNAME         reduce using rule 19 (logical -> BIGGER_EQUAL .)
    NUMBER          reduce using rule 19 (logical -> BIGGER_EQUAL .)
    LPAREN          reduce using rule 19 (logical -> BIGGER_EQUAL .)


state 67

    (20) logical -> BIGGER .

    STRING          reduce using rule 20 (logical -> BIGGER .)
    COLNAME         reduce using rule 20 (logical -> BIGGER .)
    NUMBER          reduce using rule 20 (logical -> BIGGER .)
    LPAREN          reduce using rule 20 (logical -> BIGGER .)


state 68

    (21) logical -> SMALLER_EQUAL .

    STRING          reduce using rule 21 (logical -> SMALLER_EQUAL .)
    COLNAME         reduce using rule 21 (logical -> SMALLER_EQUAL .)
    NUMBER          reduce using rule 21 (logical -> SMALLER_EQUAL .)
    LPAREN          reduce using rule 21 (logical -> SMALLER_EQUAL .)


state 69

    (22) logical -> SMALLER .

    STRING          reduce using rule 22 (logical -> SMALLER .)
    COLNAME         reduce using rule 22 (logical -> SMALLER .)
    NUMBER          reduce using rule 22 (logical -> SMALLER .)
    LPAREN          reduce using rule 22 (logical -> SMALLER .)


state 70

    (30) conditions -> NOT conditions .
    (26) conditions -> conditions . AND conditions
    (27) conditions -> conditions . OR conditions

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    $end            reduce using rule 30 (conditions -> NOT conditions .)
    SIMICOLON       reduce using rule 30 (conditions -> NOT conditions .)
    ORDER           reduce using rule 30 (conditions -> NOT conditions .)
    LIMIT           reduce using rule 30 (conditions -> NOT conditions .)
    RPAREN          reduce using rule 30 (conditions -> NOT conditions .)
    AND             shift and go to state 58
    OR              shift and go to state 59

  ! AND             [ reduce using rule 30 (conditions -> NOT conditions .) ]
  ! OR              [ reduce using rule 30 (conditions -> NOT conditions .) ]


state 71

    (9) expression -> expression PLUS . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 87

    term                           shift and go to state 88
    factor                         shift and go to state 50

state 72

    (10) expression -> expression MINUS . term
    (12) term -> . term TIMES factor
    (13) term -> . factor
    (15) term -> . term DIVIDE factor
    (14) factor -> . NUMBER
    (16) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 87
